Fix for images not showing in Directory
Change refresh interval

--- a/Directory/css/Horizontal.css
+++ b/Directory/css/Horizontal.css
@@ -1,7 +1,3 @@
-* {
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
 body {
     background-color: transparent;
     -moz-user-select: none;
@@ -15,7 +11,7 @@ body {
 }
 table {
     width: 100%;
-    border-collapse: collapse;
+    border-collapse: separate;
 }
 thead {
     text-align: left;
@@ -24,9 +20,8 @@ table th a {
     text-decoration: none;
 }
 .image img {
-    max-width: 100%;
-    max-height: 100%;
     vertical-align: middle;
+    max-width: 100%;
 }
 .nowrap {
     white-space: nowrap;
